# neuro-key

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
neuro_key/data/: __init__.py  document.py
neuro_key/helpers/: __init__.py  gpu_util.py  pos_helper.py
neuro_key/pos_taggers/: __init__.py  base_pos_tagger.py  core_nlp_pos_tagger.py  spacy_pos_tagger.py  standford_pos_tagger.py
neuro_key/preprocessors/stemmers/: __init__.py  base_stemmer.py  nltk_stemmer.py
neuro_key/rankers/: __init__.py  base_ranker.py  mmr_ranker.py
neuro_key/vectorizers/: __init__.py  base_vectorizer.py  sentence_transformer_vectorizer.py
sample_data/: sample_dataset.jsonl
scripts/embed_rank/: embed_rank.py
scripts/embed_rank/configs/: embed_rank++_config.yaml  embed_rank_config.yaml
